# docparser

./: README.md  data_persistence.py  pdf_navigation.py  pdf_viewer_ui.py  pyproject.toml  rectangle_manager.py  rectangle_processor.py  requirements.txt  screenshot_item.py  screenshot_list.py  screenshot_manager.py  simple_text_extraction_strategy.py  text_extraction_manager.py
docparser/: main.py
extractors/: pdf_rectangle_extractor.py  pdf_table_extractor.py  pdf_text_extractor.py
